# flecs-wasmtime

./: .gitignore  CMakeLists.txt  Makefile  README.md  flecs.wit  flecs_component.c  flecs_component.h
distr/: flecs.c  flecs.h
